--- a/Nodejs/TSE/Phase2/index.html
+++ b/Nodejs/TSE/Phase2/index.html
@@ -7,6 +7,19 @@
   </head>
   <body>
     <div id="app"></div>
+    <!--
+    
     <script type="module" src="/src/union_intersection.ts" ></script>
+    <script type="module" src="/src/utilitytypes.ts" ></script>
+    <script type="module" src="/src/returntypes_parameters.ts" ></script>
+    <script type="module" src="/src/Record.ts" ></script>
+    <script type="module" src="/src/typeguards.ts" ></script>
+    <script type="module" src="/src/never_unknown.ts" ></script>
+    <script type="module" src="/src/typeassertions.ts" ></script>
+    <script type="module" src="/src/discriminated_unions.ts" ></script>
+    <script type="module" src="/src/functions_overloaded.ts" ></script>
+    <script type="module" src="/src/type_predicate.ts" ></script>
+    -->
+    <script type="module" src="/src/type_predicate.ts" ></script>
   </body>
 </html>
